# github_api

./: README.md  main.py  pyproject.toml
src/github_client/: client.py  models.py  pagination.py  rate_limit.py
