[project]
name = "github-api"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "responses>=0.26.1",
]

[project.scripts]
gitapi = "github_api.main:main"

[tool.uv]
package = true

